# TSQ

./: .gitignore  BENCHMARK_SUMMARY_VISUAL.txt  FILE_NAMING_CONVENTION.md  FINAL_BENCHMARK_RESULTS.md  FINAL_NTP_WG_REPORT.md  FINAL_TEST_RESULTS.md  LICENSE  README.md  SLEW_THRESHOLD_UPDATE.md  TSQ_CLOCK_SYNC_COMPLETE.md  analyze-logs.sh  cleanup-aggressive.sh  cleanup-repo.sh  cleanup.sh  deploy_adjtime_dg.py  draft-mccollum-ntp-tsq-01.html  draft-mccollum-ntp-tsq-01.txt  draft-mccollum-ntp-tsq-01.xml  install_quiche.sh  setup_nts_servers.py  test_ntp_sync.py  tsq-stream-client.py  tsq-stream-server.py  tsq_client.py
.cleanup-aggressive/: BENCHMARK_RESULTS.md  DOCUMENTATION_INDEX.md  FINAL_COMPARISON.txt  draft-mccollum-ntp-tsq-00.html  draft-mccollum-ntp-tsq-00.txt  draft-mccollum-ntp-tsq-00.xml  test_adjtime.py  test_nts_sync.py  validate_accuracy.py
archive/: BUILD_ON_SERVER.sh  HOW_TO_RUN_DATAGRAMS.md  QUICHE_IMPLEMENTATION_PLAN.md  QUICHE_SETUP.md  QUICK_BUILD_GUIDE.md  TROUBLESHOOTING.md  analyze_measurements.py  build_and_deploy_linux.py  build_on_linux.sh  check_ntp_service.py  compare_final.py  copy_client_binary.py  deploy_datagrams.sh  fix_client_binary.py  fix_ntp_servers.py  measure_quic_overhead.py  quiche_wrapper.py  setup_passwordless_sudo.py  start_stream_servers.py  test_minimal.py  test_queries.py  tsq_client_datagram.py  tsq_server_datagram.py  tsq_server_quiche.py
draft-mccollum-tsq/: draft-mccollum-tsq-00.html  draft-mccollum-tsq-00.txt  (+8 more)
rust/: Cargo.toml  README.md  build.sh  build_linux.sh
rust/src/: adjtime.rs  client.rs  server.rs
(+27 files in other folders)
